# kaitai_struct_formats

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CONTRIBUTING.md  README.md  md2.ksy  websocket_dataframe.py
.circleci/: bintray.key  config.yml  publish
.github/: checksums  dependabot.yml  kaitai-struct-compiler_0.11_all.deb.sha256
.github/KSFGHAction/: ReadMe.md  pythonPackagesToInstallFromGit.txt  setup.cfg  setup.py
.github/KSFGHAction/KSFGHAction/: GHActionsEnv.py  GitHubAPI.py  __init__.py  __main__.py  issueParser.py  linter.py  utils.py  validator.py
3d/: fbx.ksy  gltf_binary.ksy  mmd_pmd.ksy  mmd_pmx.ksy  mmd_vmd.ksy  vector_types.ksy
CAD/: monomakh-sapr.ksy
_build/: .gitignore  Gemfile  build  build-diagrams  build-html  build-target  check-errors  footer.html.erb  format_base.html.erb  format_header.html.erb  format_index.html.erb  format_lang.html.erb  format_xref.html.erb  header.html.erb  install-kscs  test-target  usage_cpp_stl.html.erb  usage_csharp.html.erb  usage_java.html.erb  usage_javascript.html.erb  usage_python.html.erb  usage_ruby.html.erb
apps/: chromium_resource_bundle.ksy  chromium_session.ksy  chromium_tab_restore.ksy
archive/: android_asus_bootldr.ksy  android_bootldr.ksy  android_bootldr_asus.ksy  android_bootldr_huawei.ksy  android_bootldr_qcom.ksy  android_dto.ksy  android_img.ksy  android_img_huawei.ksy  android_sparse.ksy  ar_bsd.ksy  ar_generic.ksy  ar_sysv.ksy  bzip3.ksy  cpio_old_le.ksy  gzip.ksy  install_shield_3_sfx_tail.ksy  install_shield_3_z.ksy  lrzip.ksy  lz4.ksy  lz4_legacy.ksy  lzh.ksy  lzham.ksy  (+18 more)
(+717 files in other folders)
