[metadata]
name = KSFGHAction
#version = 0.1
author = KOLANICH
#url = https://gitlab.com/KOLANICH/KSFGHAction.py
description = A linter for issues in kaitai_struct_formats repo
#long_description = file: ReadMe.md
keywords = kaitai, formats
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: Text Processing

[options]
python_requires = >=3.4
zip_safe = True
packages = KSFGHAction
setup_requires = setuptools; setuptools_scm @ git+https://github.com/pypa/setuptools_scm.git
install_requires =
  plumbum @ git+https://github.com/tomerfiliba/plumbum.git
  commonmark @ git+https://github.com/readthedocs/commonmark.py
  requests @ git+https://github.com/psf/requests
  python-dateutil @ git+https://github.com/dateutil/dateutil.git
  ruamel.yaml @ hg+https://bitbucket.org/ruamel/yaml

[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
